--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "listex04",
+  "name": "mariana",
   "version": "1.0.0",
-  "description": "",
+  "description": "Tarefa de DW II",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
